--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ package-lock.json
 **/*.bun
 
 .env
+dist/
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
