--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 package-lock.json
 **/*.bun
 
+.env
+dist/
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
